--- a/fix.adoc
+++ b/fix.adoc
@@ -79,9 +79,13 @@ include::fix-premature-iface.adoc[]
 // ---
 
 include::fix-big-iface.adoc[]
-// TODO: maybe serialized types after maps as another example of leak
+// TODO: serialized types after maps as another example of leak
 include::fix-serialized-types.adoc[]
 include::fix-global.adoc[]
+
+// Theme: the world outside your code is chaotic and out of your control.
+// Restrict the chaos to the boundary of your packages,
+// and control everything inside.
 
 // == Repeated primitives
 //
